# groundstation-2026

./: .gitignore  .gitmodules  README-rocket-dashboard.md  README.md  console.html  index.html  package-lock.json  package.json  payload.html  pnpm-lock.yaml  rocket-dashboard.html  trajectory.html  tsconfig.json  vite.config.ts  vitest.config.ts
GroundStation2026/: package.json  pnpm-lock.yaml
GroundStation2026/src/: App.tsx
GroundStation2026/src-tauri/: Cargo.toml  tauri.conf.json
public/SimulationData/: IREC2025.csv
public/tiles/: metadata.json
scripts/: download-tiles.mjs
src/: App.css  App.splitView.test.tsx  App.tsx  index.html  main.tsx  test-setup.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: createIcons.py
src-tauri/src/: channels.rs  commands.rs  lib.rs  main.rs  serde_bool_0_1.rs
src-tauri/src/backend/: mod.rs
src-tauri/src/backend/data_playback/: mod.rs
src-tauri/src/backend/direction_finding_interface/: mod.rs
src-tauri/src/backend/joystick_input/: mod.rs
src-tauri/src/backend/mock_telemetry/: mod.rs
src-tauri/src/backend/serial_interface/: mod.rs
src-tauri/src/backend/telemetry_radio_interface/: mod.rs  mod.rs_new
src-tauri/src/backend/tracker_interface/: mod.rs
src-tauri/src/backend/video_capture_interface/: mod.rs
src-tauri/src/backend/video_stream_server/: mod.rs
src-tauri/src/middleware/: mod.rs  telemetry_store.rs  telemetry_stores.rs  video_encoder_manager.rs  video_stream.rs  video_streams.rs
src-tauri/src/pb/: hprc.rs
src/Components/: ArcGauge.css  ArcGauge.tsx  (+15 more)
(+92 files in other folders)
